<resources>
    <string name="app_name">Rides</string>
    <string name="value">Value</string>
    <string name="no_data_fetched_yet">No data fetched yet</string>
    <string name="get_rides">Get Rides</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="vin">Vin</string>
    <string name="make_and_model">Make and model</string>
    <string name="color">Color</string>
    <string name="car_type">Car type</string>
    <string name="vehicle_list">Vehicle List</string>
    <string name="error_message_unvalidate_range">Please enter a valid number (from 1 to 100)</string>
    <string name="emitted_carbon">Emitted carbon</string>
</resources>