<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.VehicleDetailsFragment">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_close"
        android:layout_margin="25dp"
        />

    <TextView
        android:id="@+id/tvVehicleDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/vehicle_details"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvVehicleDetails"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:orientation="vertical"
        android:background="@drawable/bg_vehicle_details_card"
        android:padding="20dp"
        >

        <TextView
            android:id="@+id/tvVin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vin"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvVinValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Vin"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/tvMakeAndModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_and_model"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvMakeAndModelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Make and model"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/tvColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvColorValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="color"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/tvCarType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_type"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvCarTypeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Car type"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>