<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvVehicleList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:gravity="center"
            android:text="@string/vehicle_list"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etValues"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_55dp"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/value"
            android:inputType="number"
            android:paddingStart="@dimen/dimen_20sp"
            android:paddingEnd="@dimen/dimen_20sp"
            android:textColor="@color/white"
            android:textColorHint="@color/textColorHint"
            android:textSize="@dimen/dimen_15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvVehicleList"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/buttonGetRides"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_55dp"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_20sp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:text="@string/get_rides"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etValues" />

        <ProgressBar
            android:id="@+id/prLoadingData"
            android:layout_width="@dimen/dimen_30dp"
            android:layout_height="@dimen/dimen_30dp"
            android:indeterminateTint="@color/black"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/buttonGetRides"
            app:layout_constraintEnd_toEndOf="@id/buttonGetRides"
            app:layout_constraintStart_toStartOf="@id/buttonGetRides"
            app:layout_constraintTop_toTopOf="@id/buttonGetRides"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRides"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_20sp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:layout_marginBottom="@dimen/dimen_20sp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonGetRides"
            tools:listitem="@layout/item_ride" />

        <TextView
            android:id="@+id/tvEmptyData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:gravity="center"
            android:text="@string/no_data_fetched_yet"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonGetRides" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>